# ai-rag-techniques-on-azure

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
data/: .gitignore  02_graph_data.ipynb  data_postprocessing.ipynb
data/sec_data/: company_data.json  merged_data.json  reference_data.csv  s&p 500.csv  sec_company_tickers.json  vti_nport.xml
data/sector_data/: adr_combined.csv  common_stock_combined.csv
docs/: hugo.toml
docs/content/: .gitignore  _index.md
docs/nb_template_md/: index.md.j2
docs/public/: 404.html  index.html  index.xml  robots.txt  sitemap.xml
eng/test_assets/: csharp_notebook.ipynb  python_notebook.ipynb
rag-demos/app_host/: Showcase.sln
rag-demos/baseline/: 02 Unified Datastore.ipynb  baseline.ipynb  metadata.json
rag-demos/baseline_performance/: README.md  baseline_performance.ipynb
rag-demos/graph_rag/: solution.ipynb
rag-demos/semantic_caching/: solution.ipynb
rag-demos/visualization_data/: README.md
rag-demos/voice_rag/: acs-basic.ipynb
scenarios/: README.md
scenarios/gpt-rag-confidential-computing/: README.md
scenarios/multiple_data_sources/: env.example.json  scenario.ipynb
scenarios/whisper_on_aks/: README.md  solution.ipynb
utils/csharp/: AzureAISearchService.cs  AzureAISearchSettings.cs  CosmosNoSqlService.cs  CosmosSpecHelpers.cs  FinanceService.cs  SemanticKernelService.cs  ServiceFromConfig.cs
utils/python_helpers/: cusip_cik_parsing.py  edgar_service.py  edger_types.py  finance_info_service.py  finance_reports_service.py  form_10k_extractor.py  (+6 more)
(+152 files in other folders)
